# PINN

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: pinn_burgers.ipynb  pinn_heat_bar.ipynb  pinn_stokes.ipynb
src/: configs.py  run.py
src/data/: base_data.py  burgers_data.py  heat_bar_data.py  protocol.py  stokes_data.py
src/pinn/: base_pinn.py  burgers_pinn.py  heat_bar_pinn.py  protocol.py  stokes_pinn.py  utils.py
src/training/: callbacks.py  trainer.py
